logların daha kolay okunması için harici bir html sayfası debug tool olarak kodlandı. log formatı güncellendi.

YÜKSEK ÖNCELİKLİ OLARAK YAPILMASI PLANLANANLAR
bug: en yeni kullanicilarin first activity tarihi bos gorunuyor
ekşi sözlük sayfasından mevcut domain okunabiliyor. ekşi engele entegre edilebilir.
loglar daha düzgün yazılmalı başlangıç ve bitişi net olmalı
action başlangıç ve bitiş süresi ölçülebilir
backendte 0 idli yazarlar kaydedilmemeli özellikle LIST için, (frontendte 0idli yazarlar filtrelendi) 
frontend tarafında arraylerden author_list verimsiz bir biçimde oluşturuluyor.
notification sayfasında ve loglarda enumların ne olduğu anlaşılmıyor.
loglar incelenmeli, bitişte bittiğine dair bir bilgi olmalı
takip edilen kullanıcıları engelleme ve sadece gerekli işlemleri yap ayarı çok uzun sürüyor.
  ayarlardan kaldırılmalı ve otomatik hale getirilmeli
  yeni durumda engel listesi belli bir sayıdan fazla ise devreye girmeli
  yeni durumda engellenmiş ve takip edilen yazarların scrape işlemleri için bir limit gelmeli.
  [düşük] takip edilen ve engellenen kişiler listesi localde tutulup arada sync edilerek scrape işlemi süreci azaltılabilir
  [düşük] localde tutulursa scrape için belki bir sınır getirmeye gerek yoktur
ayarlar sayfası tasarımı
list ban için kaydedilen liste string değil bir string queue olmalı.
kullanıcı VPN kullandığında eski url, yönlendiriliyor. şu anda bu durum erişim eksikliği olarak yorumlanıyor ama yönlendirilen url, yeni url olarak yorumlanabilir.
notification sayfasındaki BAN/UNDOBAN gibi ifadeler türkçeleştirilmeli
notification sayfasına yapılabilecek tüm işlemlerin anlatıldığı bir diyagram konulmalı.
unique identifier ile, bazı butonlara ve yükleme sonrasında bildirim gitsin.
notification kısmında tahmini bitiş süresi
performans analizi yapılmalı
  map.clear memory leak?
  logger'ın etkisi gözlemlenmeli
    array silindiğinde gerçekten bellekten siliniyor mu, reflerden dolayı memory leak oluşuyor mu?